--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/pangea/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -11,8 +11,8 @@
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <script type="module" crossorigin src="/assets/index.faabe275.js"></script>
-    <link rel="stylesheet" href="/assets/index.4b0580ed.css">
+    <script type="module" crossorigin src="/pangea/assets/index.8a26aa58.js"></script>
+    <link rel="stylesheet" href="/pangea/assets/index.7860e979.css">
   </head>
   <body>
     <div id="app"></div>
